     [Jim Jagielski]

  *) Added in Cliff Skolnick's read_client_block patch (check for
     no reads and break) [Jim Jagielski]

  *) If there was no default MIME type defined, Apache sent Content-type:
     without a newline, thus swallowing the next header. Changed to send no
     Content-type: at all. [Ben Laurie]

  *) Long overdue revamp of the Cookies module to stop Apache cookies
     colliding with other cookies a site may be using [Mark Cox]

  *) Clean up strings.h warning for SGI [Mark Cox]

  *) Add HAVE_MMAP to SCO 5. [Ben Laurie]

  *) SCO 5 reportedly (by Jay Thorne <jay@result.com>) requires
     FCNTL_SERIALIZED_ACCEPT. Added to conf.h. [Ben Laurie]

  *) Clear up some nasty (int)NULLs. [Ben Laurie]

  *) Clean code to warning level 3 under SCO 5. [Ben Laurie]

  *) Fix potential buffer overrun in mod_proxy.c. [Ben Laurie]

  *) Move Configuration to Configuration.tmpl for CVS development. Make CVS
     ignore Configuration, Makefile and modules.c. [Ben Laurie]

Changes with Apache 1.1b0

  *) Use shmget() (and family) for shared memory for the scoreboard
     for SysV-based systems; basically A/UX and IRIX. Allow for
     memory break-point (brk(0)) to be moved if need be before
     attaching the mem segment. [Jim Jagielski]

  *) Use mmap() to allocated shared memory for the scoreboard on
     Solaris, SunOS, Digital UNIX, BSDI and HP/UX. It should work on
     most of the other architectures. [David Robinson]

  *) Cache the contents of .htaccess file for the duration of a request.
     [David Robinson]

  *) Avoid use of strftime() whilst processing request. [David Robinson]

  *) Add the ability to have media type-based CGI script actions,
     as well as an example and relevent srm.conf entries. [Alexei Kosut]

  *) Update to the icon set, and apache_pb (Powered by Apache!) logo
     added [Alexei Kosut]

  *) Added an extra variable for use in mod_include: FILE_OWNER
     which contains the owner of the file.  [Nick Williams]
